wip: implement Article module
