# app/Http/Resources/V1/ArticleResource.php
@@ -1,0 +1,28 @@
+<?php
+
+namespace App\Http\Resources\V1;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class ArticleResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'slug' => $this->slug,
+            'title' => $this->title,
+            'description' => $this->description,
+            'content' => $this->content,
+            'author' => $this->author,
+            'category' => $this->category,
+            'source' => $this->source,
+            'published_at' => $this->published_at
+        ];
+    }
+}
