# app/Models/Article.php
@@ -1,0 +1,36 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Support\Str;
+use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+
+class Article extends Model
+{
+    use HasFactory;
+
+    protected $fillable = [
+        'title',
+        'description',
+        'content',
+        'category',
+        'source',
+        'author',
+        'published_at'
+    ];
+
+    public static function boot() {
+
+        parent::boot();
+
+        static::saving(function ($model) {
+            $model->slug = Str::slug($model->title);
+        });
+    }
+
+    public function getRouteKeyName() {
+
+        return 'slug';
+    }
+}
