# routes/api_v1.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\Api\V1\ArticleController;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\V1\Auth\LoginController;
 use App\Http\Controllers\Api\V1\Auth\VerifyEmailController;
@@ -7,17 +8,29 @@ use App\Http\Controllers\Api\V1\Auth\RegistrationController;
 use App\Http\Controllers\Api\V1\Auth\PasswordResetController;
 use App\Http\Middleware\RequireJson;
 
-Route::post('register', RegistrationController::class)->name('auth.register');
-Route::post('login', [LoginController::class, 'login'])->name('auth.login');
+Route::middleware(RequireJson::class)->group(function() {
 
-Route::post('forgot-password', [PasswordResetController::class, 'sendLink'])->name('auth.forgot-password')->middleware('throttle:1,60');
-Route::post('reset-password', [PasswordResetController::class, 'reset'])->name('auth.reset-password');
+    /* Auth Routes */
+    Route::post('register', RegistrationController::class)->name('auth.register');
+    Route::post('login', [LoginController::class, 'login'])->name('auth.login');
 
-Route::get('/verify-email/{id}/{hash}', VerifyEmailController::class)
-    ->middleware(['signed', 'throttle:6,1'])
-    ->name('verification.verify');
+    Route::post('forgot-password', [PasswordResetController::class, 'sendLink'])->name('auth.forgot-password')->middleware('throttle:1,60');
+    Route::post('reset-password', [PasswordResetController::class, 'reset'])->name('auth.reset-password');
 
-Route::middleware('auth:sanctum')->group(function() {
+    Route::get('/verify-email/{id}/{hash}', VerifyEmailController::class)
+        ->middleware(['signed', 'throttle:6,1'])
+        ->withoutMiddleware(RequireJson::class)
+        ->name('verification.verify');
 
-    Route::post('logout', [LoginController::class, 'logout'])->name('auth.logout');
+
+    Route::middleware('auth:sanctum')->group(function() {
+
+        /* Article Routes */
+        Route::get('articles', [ArticleController::class, 'index'])->name('articles.index');
+        Route::get('articles/by-keyword', [ArticleController::class, 'indexByKeyword'])->name('articles.indexByKeyword');
+        Route::get('articles/{article}', [ArticleController::class, 'show'])->name('articles.show');
+
+        Route::post('logout', [LoginController::class, 'logout'])->name('auth.logout');
+    });
+
 });
